# otel_testing

./: .gitignore  docker-compose.clickhouse.yml  docker-compose.grafana.yml  docker-compose.yml  otel_testing.sln
dotnet/: Dockerfile  Program.cs  Telemetry.cs  appsettings.Development.json  appsettings.json  dotnet.csproj
dotnet/Properties/: launchSettings.json
grafana/clickhouse_provisioning/datasources/: automatic.yml
grafana/provisioning/datasources/: automatic.yml
node/: index.js  instrumentation.js  package-lock.json  package.json
otel/: clickhouse-otel-collector-config.yaml  otel-collector-config.yaml
prometheus/: prometheus.yml
python/: Dockerfile  app.py  pyproject.toml
tempo/: tempo-config.yaml
