[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Malcolm Roberts"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
opentelemetry-distro = "^0.51b0"
python-json-logger = "^3.2.1"
opentelemetry-api = "^1.30.0"
opentelemetry-sdk = "^1.30.0"
requests = "^2.32.3"
opentelemetry-exporter-otlp = "^1.30.0"
opentelemetry-instrumentation-flask = "^0.51b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
